Add ASAP prep time estimates and align product item type schema
